--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "sass": "^1.70.0",
@@ -34,7 +36,6 @@
       ">0.2%",
       "not dead",
       "not op_mini all"
-      
     ],
     "development": [
       "last 1 chrome version",
