--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.1",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-icon": "^1.0.0",
